--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,8 @@
 {
   "compilerOptions": {
+    "experimentalDecorators": true,
+    "target": "ES6",
+    "strict": true,
     "baseUrl": "./src",
     "outDir": "./output",
     "moduleResolution": "node"
